--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
     "expo-status-bar": "~1.0.4",
+    "immer": "^9.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
