--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0"
   },
