--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.27.2",
     "expo": "~42.0.1",
     "expo-app-loading": "1.1.2",
+    "expo-secure-store": "~10.2.0",
     "expo-status-bar": "~1.0.4",
     "immer": "^9.0.7",
     "react": "16.13.1",
