--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/native-stack": "^6.2.5",
-    "@react-navigation/stack": "^6.0.11",
-    "@reduxjs/toolkit": "^1.6.2",
-    "axios": "^0.27.2",
-    "expo": "~42.0.1",
-    "expo-app-loading": "1.1.2",
-    "expo-secure-store": "~10.2.0",
-    "expo-status-bar": "~1.0.4",
-    "immer": "^9.0.7",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-native-fontawesome": "^0.3.0",
+        "@react-native-async-storage/async-storage": "~1.17.3",
+        "@react-navigation/native": "^6.0.6",
+        "@react-navigation/native-stack": "^6.2.5",
+        "@react-navigation/stack": "^6.0.11",
+        "@reduxjs/toolkit": "^1.6.2",
+        "axios": "^0.27.2",
+        "expo": "^46.0.0",
+        "expo-app-loading": "~2.1.0",
+        "expo-image-picker": "~13.3.1",
+        "expo-media-library": "~14.2.0",
+        "expo-secure-store": "~11.3.0",
+        "expo-splash-screen": "^0.16.2",
+        "expo-status-bar": "~1.4.0",
+        "immer": "^9.0.7",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "react-native": "0.69.6",
+        "react-native-gesture-handler": "~2.5.0",
+        "react-native-safe-area-context": "4.3.1",
+        "react-native-screens": "~3.15.0",
+        "react-native-svg": "12.3.0",
+        "react-native-web": "~0.18.7",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2",
+        "redux-persist": "^6.0.0",
+        "redux-thunk": "^2.4.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.18.6",
+        "@types/react": "^18.0.21",
+        "@types/react-native": "^0.70.4",
+        "typescript": "^4.6.3"
+    },
+    "resolutions": {
+        "@types/react": "18.0.0",
+        "@types/react-dom": "18.0.0"
+    },
+    "private": true
 }
