--- a/package.json
+++ b/package.json
@@ -4,45 +4,49 @@
         "start": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
-        "web": "expo start --web",
         "eject": "expo eject"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-native-fontawesome": "^0.3.0",
-        "@react-native-async-storage/async-storage": "~1.17.3",
-        "@react-navigation/native": "^6.0.6",
-        "@react-navigation/native-stack": "^6.2.5",
-        "@react-navigation/stack": "^6.0.11",
+        "@hookform/resolvers": "^3.3.2",
+        "@react-native-async-storage/async-storage": "1.18.2",
+        "@react-navigation/native": "^6.1.9",
+        "@react-navigation/native-stack": "^6.9.17",
+        "@react-navigation/stack": "^6.3.20",
         "@reduxjs/toolkit": "^1.6.2",
         "axios": "^0.27.2",
-        "expo": "^46.0.0",
+        "expo": "^49.0.0",
         "expo-app-loading": "~2.1.0",
-        "expo-image-picker": "~13.3.1",
-        "expo-media-library": "~14.2.0",
-        "expo-secure-store": "~11.3.0",
-        "expo-splash-screen": "^0.16.2",
-        "expo-status-bar": "~1.4.0",
+        "expo-image-picker": "~14.3.2",
+        "expo-media-library": "~15.4.1",
+        "expo-secure-store": "~12.3.1",
+        "expo-splash-screen": "~0.20.5",
+        "expo-status-bar": "~1.6.0",
+        "expo-updates": "~0.18.17",
+        "form-data": "^4.0.0",
         "immer": "^9.0.7",
-        "react": "18.0.0",
-        "react-dom": "18.0.0",
-        "react-native": "0.69.6",
-        "react-native-gesture-handler": "~2.5.0",
-        "react-native-safe-area-context": "4.3.1",
-        "react-native-screens": "~3.15.0",
-        "react-native-svg": "12.3.0",
-        "react-native-web": "~0.18.7",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.48.2",
+        "react-native": "0.72.6",
+        "react-native-gesture-handler": "~2.12.0",
+        "react-native-safe-area-context": "4.6.3",
+        "react-native-screens": "~3.22.0",
+        "react-native-svg": "13.9.0",
+        "react-native-web": "~0.19.6",
         "react-redux": "^7.2.6",
         "redux": "^4.1.2",
         "redux-persist": "^6.0.0",
-        "redux-thunk": "^2.4.0"
+        "redux-thunk": "^2.4.0",
+        "yup": "^1.3.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.18.6",
-        "@types/react": "^18.0.21",
+        "@babel/core": "^7.20.0",
+        "@types/react": "~18.2.14",
         "@types/react-native": "^0.70.4",
-        "typescript": "^4.6.3"
+        "typescript": "^5.1.3"
     },
     "resolutions": {
         "@types/react": "18.0.0",
