--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "expo-updates": "~0.18.17",
         "form-data": "^4.0.0",
         "immer": "^9.0.7",
-        "react": "18.2.0",
+        "react": "^18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.48.2",
         "react-native": "0.72.6",
@@ -36,7 +36,7 @@
         "react-native-screens": "~3.22.0",
         "react-native-svg": "13.9.0",
         "react-native-web": "~0.19.6",
-        "react-redux": "^7.2.6",
+        "react-redux": "^8.1.3",
         "redux": "^4.1.2",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.4.0",
