--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@fortawesome/react-native-fontawesome": "^0.3.0",
         "@hookform/resolvers": "^3.3.2",
         "@react-native-async-storage/async-storage": "1.18.2",
+        "@react-native-picker/picker": "^2.6.1",
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/native-stack": "^6.9.17",
         "@react-navigation/stack": "^6.3.20",
